--- a/frontend-02/fig.yml
+++ b/frontend-02/fig.yml
@@ -29,8 +29,20 @@ web:
 
 wordpress:
   build: ./wordpress
-  command: php -S 0.0.0.0:8000 -t /code/wordpress
+  command: php -S 0.0.0.0:8000 -t /code
   ports:
     - "8000:8000"
   environment:
     - SERVICE_NAME=wordpress
+
+cadvisor:
+  image: google/cadvisor
+  ports:
+    - "8080:8080"
+  volumes:
+    - /:/rootfs:ro
+    - /var/run:/var/run:rw
+    - /sys:/sys:ro
+    - /var/lib/docker/:/var/lib/docker:ro
+  environment:
+    - SERVICE_NAME=cadvisor
