--- a/consul-02/fig.yml
+++ b/consul-02/fig.yml
@@ -19,3 +19,15 @@ registrator:
   volumes:
     - /var/run/:/tmp/
   command: "consul://{{NODE_IP}}:8500"
+
+cadvisor:
+  image: google/cadvisor
+  ports:
+    - "8080:8080"
+  volumes:
+    - /:/rootfs:ro
+    - /var/run:/var/run:rw
+    - /sys:/sys:ro
+    - /var/lib/docker/:/var/lib/docker:ro
+  environment:
+    - SERVICE_NAME=cadvisor
