--- a/frontend-01/fig.yml
+++ b/frontend-01/fig.yml
@@ -33,3 +33,15 @@ web:
     - .:/code
   environment:
     - SERVICE_NAME=web
+
+cadvisor:
+  image: google/cadvisor
+  ports:
+    - "8080:8080"
+  volumes:
+    - /:/rootfs:ro
+    - /var/run:/var/run:rw
+    - /sys:/sys:ro
+    - /var/lib/docker/:/var/lib/docker:ro
+  environment:
+    - SERVICE_NAME=cadvisor
